kubernetes/apps/portfolio/staging/admin-back.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-admin-backend-staging
  labels:
    app: portfolio-admin-backend-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-admin-backend-staging
  template:
    metadata:
      labels:
        app: portfolio-admin-backend-staging
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/portfolio-admin-backend:main-84fca1a561831b18145e3c540cec5065d714b7ba-35 # {"$imagepolicy": "default:portfolio-admin-backend-staging"}
          ports:
            - containerPort: 8080
