kubernetes/apps/portfolio/staging/admin-front.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-admin-frontend-staging
  labels:
    app: portfolio-admin-frontend-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-admin-frontend-staging
  template:
    metadata:
      labels:
        app: portfolio-admin-frontend-staging
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/portfolio-admin-frontend:main-578e243d471dbed7c892819097038719d6afa9d7-46 # {"$imagepolicy": "default:portfolio-admin-frontend-staging"}
          ports:
            - containerPort: 4400
