kubernetes/apps/portfolio/staging/admin.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-admin-staging
  labels:
    app: portfolio-admin-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-admin-staging
  template:
    metadata:
      labels:
        app: portfolio-admin-staging
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/portfolio-admin:main-4a861a36cc40e82dea4627a51a61d4951143a0fc-55 # {"$imagepolicy": "default:portfolio-admin-staging"}
          ports:
            - containerPort: 4400
