kubernetes/apps/portfolio/staging/app.deployment-overlay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app
spec:
  template:
    spec:
      containers:
        - name: app
