kubernetes/apps/portfolio/staging/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-app-staging
  labels:
    app: portfolio-app-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-app-staging
  template:
    metadata:
      labels:
        app: portfolio-app-staging
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/portfolio-app-staging:1.0.5 # {"$imagepolicy": "flux-system:portfolio-app-staging"}
          ports:
            - containerPort: 4400
