kubernetes/apps/portfolio/staging/back.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend-staging
  labels:
    app: portfolio-backend-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-backend-staging
  template:
    metadata:
      labels:
        app: portfolio-backend-staging
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/portfolio-backend:main-0b4e890efa00b9218d70efe468264fe3a67366a4-61 # {"$imagepolicy": "default:portfolio-backend-staging"}
          ports:
            - containerPort: 8080
