kubernetes/apps/portfolio/staging/admin-back.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-admin-backend-staging
spec:
  selector:
    app: portfolio-admin-backend-staging
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
