kubernetes/apps/portfolio/staging/admin.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-admin-frontend-staging
spec:
  selector:
    app: portfolio-admin-frontend-staging
  ports:
    - name: http
      protocol: TCP
      port: 4400
      targetPort: 4400
  type: ClusterIP
