kubernetes/apps/portfolio/staging/back.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend-staging
spec:
  selector:
    app: portfolio-backend-staging
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
