kubernetes/apps/portfolio/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - portfolio-admin-backend-staging.piny940.com
      secretName: cluster-tls
    - hosts:
        - portfolio-admin-frontend-staging.piny940.com
      secretName: cluster-tls
    - hosts:
        - portfolio-app-staging.piny940.com
      secretName: cluster-tls
  rules:
    - host: portfolio-app-staging.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 4400
    - host: portfolio-admin-backend-staging.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-admin-backend-staging
                port:
                  number: 8080
    - host: portfolio-admin-frontend-staging.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-admin-frontend-staging
                port:
                  number: 4400
